config/manager/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ports
  namespace: default
spec:
  podSelector: {}
  egress:
    - to:
        - ipBlock:
            cidr: 159.60.128.0/24  # CIDR of Sealight server Endpoint.
      ports:
        - protocol: TCP
          port: 0-8443
        - port: 4500
          protocol: UDP
        - port: 123
          protocol: UDP
        - protocol: UDP 
          port: 53
  policyTypes:
    - Egress
